# SnakeSDL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
pixelart/: OnlineTool.url  fruit_apple.pixil  fruit_passionfruit.pixil  fruit_watermelon.pixil  snake.pixil
src/: CMakeLists.txt  main.cpp
src/Exceptions/: Exceptions.hpp  InvalidRenderer.hpp  InvalidTexture.hpp
src/Logging/: CMakeLists.txt  Logging.cpp  Logging.hpp
src/Textures/: CMakeLists.txt  Fruit.cpp  Fruit.hpp  Scenario.cpp  Scenario.hpp  Snake.cpp  Snake.hpp  Sprite.h  Texture.cpp  Texture.hpp  Textures.hpp
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
